--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <div class="container">
         <h1>↓Eaglercraft 版本选择↓<br>点击按钮后将会直接打开游戏</h1>
         <h3>官方版本</h3>
+        <button onclick="openPage('Offline_Download_Version_1.5.2.html')">官方 1.5.2版本</button>
         <button onclick="openPage('EaglercraftX_1.8_u43_Offline_Signed.html')">官方 1.8.8版本</button>
         <h3>破解版本</h3>
         <button onclick="openPage('DragonX V3 Client.html')">DragonX V3 Client</button>
