--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <button onclick="openPage('EaglercraftX_1.8_u43_Offline_Signed.html')">官方 1.8.8版本</button>
         <h3>破解版本</h3>
         <button onclick="openPage('DragonX V3 Client.html')">DragonX V3 Client</button>
+        <h5>若您拥有更多版本请联系"[1224huangjin@gmail.com](mailto:1224huangjin@gmail.com)，谢谢"
     </div>
     <script>
         function openPage(url) {
