--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             height: 100vh;
             margin: 0;
             background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
-                        url('minecraft.jpg') no-repeat center center fixed;
+                        url('image/minecraft.jpg') no-repeat center center fixed;
             background-size: cover;
             color: #fff;
         }
