--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="在线游玩 Minecraft 的 Eaglercraft 版本，提供 1.5.2 和 1.8.8 官方版本及 DragonX V3 Client 破解版本。">
     <meta name="keywords" content="Eaglercraft, Minecraft, 在线游玩, 1.5.2版本, 1.8.8版本, 破解版本, DragonX">
-    <meta name="author" content="1224huangjin@gmail.com">
+    <meta name="author" content="1224huangjin@gmail.com,1224HuangJin Game">
     <title>Eaglercraft版本在线游玩</title>
     <style>
         body {
